(improv) modify the side drawer and navbar to use fixed to prevent bad behavior on mobile

--- a/src/app/components/navbar/features/side-drawer/side-drawer.component.css
+++ b/src/app/components/navbar/features/side-drawer/side-drawer.component.css
@@ -80,7 +80,7 @@
 .menu-toggle div input:checked ~ div span:nth-last-child(1)
 {
   transform: rotate(-45deg);
-  width: 33px;
+  width: 32px;
   top: 0;
   left: 18%;
 }
